<resources>
    <string name="app_name" translatable="false">My Fitness Diary</string>
    <string name="insert_email">Insert email</string>
    <string name="insert_password">Insert password</string>
    <string name="login" translatable="false">LOGIN</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="field_uncorrected">Field uncorrected</string>
    <string name="auth_failed">AUTHENTICATION FAILED!</string>
    <string name="welcome_back">WELCOME BACK!</string>
</resources>