<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadeScrollbars="false"
    android:fillViewport="true"
    android:scrollbarSize="4dp"
    android:scrollbarThumbVertical="@drawable/custom_thumb_scrollbar"
    android:scrollbarTrackVertical="@drawable/custom_track_scrollbar">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/CN_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_background"
        tools:context=".ui.activities.starter.ActivityLogin">

        <!--PROGRESS BAR-->
        <ProgressBar
            android:id="@+id/PB_background"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--IMAGE VIEW BACKGROUND-->
        <ImageView
            android:id="@+id/IV_background"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:alpha="0.95"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <!--TEXT VIEW FOR THE TITLE-->
        <TextView
            android:id="@+id/TV_title_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="148dp"
            android:fontFamily="@font/audiowide"
            android:maxLines="1"
            android:text="@string/app_name"
            android:textColor="@color/orange_title_app"
            android:textSize="35sp"
            app:layout_constraintBottom_toTopOf="@id/LT_ET_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <!--EMAIL FIELD-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/LT_ET_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/app_background"
            android:hint="@string/insert_email"
            android:textColorHint="@color/hint"
            app:boxBackgroundColor="@color/app_foreground"
            app:endIconMode="clear_text"
            app:endIconTint="@color/white"
            app:errorEnabled="true"
            app:layout_constraintBottom_toTopOf="@id/LT_ET_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/TV_title_app"
            app:startIconDrawable="@drawable/ic_email"
            app:startIconTint="@color/white">

            <!--EMAIL TEXT FIELD-->
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/TF_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--PASSWORD FIELD-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/LT_ET_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/insert_password"
            android:textColorHint="@color/hint"
            app:boxBackgroundColor="@color/app_foreground"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/white"
            app:errorEnabled="true"
            app:layout_constraintBottom_toTopOf="@id/BTN_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/LT_ET_email"
            app:startIconDrawable="@drawable/ic_lock"
            app:startIconTint="@color/white">

            <!--PASSWORD TEXT FIELD-->
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/TF_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--LOGIN BUTTON-->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/BTN_login"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:backgroundTint="@color/red_button"
            android:maxLines="1"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/BTN_create_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/LT_ET_password" />

        <!--BUTTON CREATE ACCOUNT-->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/BTN_create_account"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/create_account"
            android:textColor="@color/green_button"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/BTN_login"
            app:strokeColor="@color/green_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>